added build files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,35 @@
 libs/Handler/FileHandler.cs
 libs/libs.csproj
 game/game.csproj
+game/obj/game.csproj.nuget.dgspec.json
+game/obj/game.csproj.nuget.g.props
+game/obj/project.assets.json
+game/obj/project.nuget.cache
+game/obj/Debug/net8.0/apphost.exe
+game/obj/Debug/net8.0/game.AssemblyInfo.cs
+game/obj/Debug/net8.0/game.AssemblyInfoInputs.cache
+game/obj/Debug/net8.0/game.assets.cache
+game/obj/Debug/net8.0/game.csproj.AssemblyReference.cache
+game/obj/Debug/net8.0/game.csproj.CoreCompileInputs.cache
+game/obj/Debug/net8.0/game.csproj.FileListAbsolute.txt
+game/obj/Debug/net8.0/game.dll
+game/obj/Debug/net8.0/game.GeneratedMSBuildEditorConfig.editorconfig
+game/obj/Debug/net8.0/game.genruntimeconfig.cache
+game/obj/Debug/net8.0/game.pdb
+game/obj/Debug/net8.0/ref/game.dll
+game/obj/Debug/net8.0/refint/game.dll
+libs/obj/libs.csproj.nuget.dgspec.json
+libs/obj/libs.csproj.nuget.g.props
+libs/obj/project.assets.json
+libs/obj/project.nuget.cache
+libs/obj/Debug/net8.0/libs.AssemblyInfo.cs
+libs/obj/Debug/net8.0/libs.AssemblyInfoInputs.cache
+libs/obj/Debug/net8.0/libs.assets.cache
+libs/obj/Debug/net8.0/libs.csproj.AssemblyReference.cache
+libs/obj/Debug/net8.0/libs.csproj.CoreCompileInputs.cache
+libs/obj/Debug/net8.0/libs.csproj.FileListAbsolute.txt
+libs/obj/Debug/net8.0/libs.dll
+libs/obj/Debug/net8.0/libs.GeneratedMSBuildEditorConfig.editorconfig
+libs/obj/Debug/net8.0/libs.pdb
+libs/obj/Debug/net8.0/ref/libs.dll
+libs/obj/Debug/net8.0/refint/libs.dll
